# bot4

./: .claude_code  .claude_project  .env  .env.template  .gitignore  .mcp.json  ACTUAL_COMPLETION_STATUS.md  AGENT_COMMUNICATION_PROTOCOL.yaml  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE_ANALYSIS.md  ARCHITECTURE_MASTER.md  ARCHITECTURE_REDIRECT.md  CLAUDE.md  CLAUDE_SESSION_RECOVERY.md  CLAUDE_SESSION_RECOVERY_20250824.md  CLAUDE_TEAM_RULES_V3.md  CLEANUP_COMPLETE.md  CODEBASE_ANALYSIS.json  CODING_STANDARDS.md  COMPILATION_FIX_PROGRESS.md  COMPLETE_CODEBASE_REGISTRY.md  COMPLETE_MCP_IMPLEMENTATION_FINAL.md  COMPONENT_INTERACTION_MATRIX.md  COMPREHENSIVE_COST_ANALYSIS.md  COMPREHENSIVE_INTEGRITY_REVIEW.md  COMPREHENSIVE_PROJECT_PLAN_FINAL.md  COMPREHENSIVE_RISK_CLAMPS_STATUS.md  CRITICAL_ACTION_ITEMS.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_GAPS_FOUND.md  CRITICAL_PERFORMANCE_FINDINGS_SUMMARY.md  DATA_INTELLIGENCE_IMPLEMENTATION_REPORT.md  DEDUPLICATION_TASKS_MASTER.md  DEEP_DIVE_AUDIT_REPORT.md  DEEP_DIVE_FINAL_5_PERCENT.md  DEEP_DIVE_GAP_ANALYSIS.md  DEEP_DIVE_INCOMPLETE_TASKS_ANALYSIS.md  DEEP_DIVE_INTEGRATION_ANALYSIS.md  DEEP_LSTM_RESEARCH_INTEGRATION.md  DEEP_QUALITY_AUDIT_ROUND2.md  (+88 more)
mcp/agents/architect/: Cargo.toml  Dockerfile
mcp/agents/architect/src/: analysis.rs  duplication.rs  layers.rs  main.rs
mcp/agents/complianceauditor/: Cargo.toml
mcp/agents/complianceauditor/src/: layer_auditor.rs  main.rs  report_generator.rs  rules_enforcer.rs  task_tracker.rs
mcp/agents/exchangespec/: Cargo.toml  Dockerfile
mcp/agents/exchangespec/src/: main.rs  order_manager.rs  rate_limiter.rs  smart_router.rs  websocket_manager.rs
mcp/agents/infraengineer/: Cargo.toml
mcp/agents/infraengineer/src/: auto_tuner.rs  cpu_optimizer.rs  deployment.rs  docker_manager.rs  kubernetes_manager.rs  main.rs  main_enhanced.rs  monitoring.rs
mcp/agents/integrationvalidator/: Cargo.toml
mcp/agents/integrationvalidator/src/: api_validator.rs  main.rs  (+3 more)
mcp/agents/mlengineer/: Cargo.toml  Dockerfile
mcp/agents/qualitygate/: Cargo.toml
mcp/agents/riskquant/: Cargo.toml  Dockerfile
mcp/coordinator/: Cargo.toml  Dockerfile
mcp/coordinator/src/: agents.rs  context.rs  main.rs  messages.rs
rust_core/: ARCHITECTURE_PATTERNS_COMPLETE.md  BOUNDED_CONTEXTS.md  COMPILATION_STATUS.md  Cargo.toml  QA_REPORT.md  eliminate_all_duplicates.rs  performance_report.rs  run_benchmarks.sh  test_avx512_hot_path.rs  test_decimal.rs  test_simd_detailed  test_simd_detailed.rs  test_simd_standalone  test_simd_standalone.rs
rust_core/.cargo/: config.toml
rust_core/abstractions/: Cargo.toml
rust_core/abstractions/src/: data.rs  lib.rs  ml.rs  orders.rs  risk.rs
rust_core/application/commands/: place_order_command.rs
rust_core/benches/: contention_bench.rs  network_jitter_bench.rs  order_management_bench.rs  performance_benchmarks.rs  risk_engine_bench.rs
rust_core/bot4-main/: Cargo.toml
rust_core/bot4-main/src/: main.rs
rust_core/config/: config.dev.toml  config.prod.toml
rust_core/crates/analysis/: Cargo.toml
rust_core/crates/data_ingestion/: Cargo.toml
rust_core/crates/data_intelligence/: Cargo.toml
rust_core/crates/exchange_monitor/: Cargo.toml
rust_core/crates/feature_store/: Cargo.toml
rust_core/crates/infrastructure/: Cargo.toml
rust_core/crates/ml/: Cargo.toml
rust_core/crates/order_management/: Cargo.toml
rust_core/crates/paper_trading/: Cargo.toml
rust_core/crates/risk/: Cargo.toml
rust_core/crates/risk_engine/: Cargo.toml
rust_core/crates/strategies/: Cargo.toml
rust_core/crates/trading_engine/: Cargo.toml
rust_core/crates/types/: Cargo.toml
rust_core/crates/websocket/: Cargo.toml
rust_core/domain/: mod.rs
rust_core/domain/entities/: mod.rs  oco_order.rs  order.rs  order.rs.backup
rust_core/domain/errors/: error_taxonomy.rs
rust_core/domain/events/: mod.rs  order_event.rs
rust_core/domain/services/: stp_policy.rs
rust_core/domain/value_objects/: decimal_money.rs  fee.rs  market_impact.rs  mod.rs  price.rs  price_alias.rs  quantity.rs  statistical_distributions.rs  symbol.rs  timestamp_validator.rs  validation_filters.rs
rust_core/domain_types/: Cargo.toml
rust_core/domain_types/src/: candle.rs  canonical_types.rs  config_constants.rs  conversion.rs  conversions.rs  currency.rs  duplicate_guard.rs  legacy.rs  lib.rs  market_data.rs  order.rs  parallel_validation.rs  phantom.rs  position_canonical.rs  price.rs  quantity.rs  risk_limits.rs  trade.rs  unified_types.rs  validation.rs
rust_core/dto/: unified_dtos.rs
rust_core/dto/database/: order_dto.rs
rust_core/dto/request/: order_dto.rs
rust_core/dto/response/: order_response.rs
rust_core/event_bus/: Cargo.toml
rust_core/event_bus/src/: disruptor.rs  events.rs  handlers.rs  lib.rs  metrics.rs  processor.rs  replay.rs  sequencer.rs  trading_ops.rs
rust_core/event_bus/tests/: integration_tests.rs
rust_core/infrastructure/src/: backpressure.rs  event_ordering.rs
rust_core/layer_enforcement/: Cargo.toml
rust_core/layer_enforcement/src/: lib.rs
rust_core/mathematical_ops/: Cargo.toml
rust_core/mathematical_ops/src/: correlation.rs  indicators.rs  kelly.rs  lib.rs  matrix_ops.rs  returns.rs  risk_metrics.rs  statistics.rs  unified_calculations.rs  utils.rs  variance.rs  volatility.rs
rust_core/ports/: INTERFACE_SEGREGATION.md
rust_core/ports/outbound/: exchange_port.rs  repository_port.rs
rust_core/scripts/: final_underscore_cleanup.sh  fix_all_warnings.sh  fix_infrastructure_underscores.sh  fix_ml_comprehensive.sh  fix_ml_indicators.sh  fix_ml_remaining.sh  fix_ml_simd_issues.sh  fix_trading_engine.sh  full_qa_validation.sh  revert_bad_underscores.sh  supply_chain_security.sh  test_ml_optimizations.py
rust_core/src/: logging.rs  main.rs  metrics_server.rs  runtime_config.rs
rust_core/src/observability/: metrics.rs  mod.rs  server.rs
rust_core/src/tests/: exchange_outage_recovery.rs
rust_core/tests/: comprehensive_tests.rs  integration_test.rs  integration_tests.rs  ks_statistical_tests.rs  performance_validation.rs  phase3_integration.rs  property_tests.rs
(+1120 files in other folders)
