[workspace]
members = [
    "bot4-main",
    "domain_types",  # Layer 1.6.1: Canonical type system - DEEP DIVE implementation
    "mathematical_ops",  # Layer 1.6.2: Consolidated math functions - DEEP DIVE implementation
    "crates/infrastructure",
    "crates/trading_engine",
    "crates/risk_engine",
    "crates/risk", 
    "crates/websocket", 
    "crates/order_management",
    "crates/analysis",
    "crates/ml",  # Re-enabled with libtorch installed
    "crates/data_intelligence",
    "crates/data_ingestion",  # Layer 1.1: Redpanda high-performance ingestion
    "crates/feature_store",  # Layer 1.5: Feature Store with <10ms serving
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bot4 Team"]
description = "Autonomous cryptocurrency trading platform"

# Performance optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[profile.bench]
inherits = "release"

# Shared dependencies
[workspace.dependencies]
# Memory management - CRITICAL (Day 2 Sprint)
mimalloc = { version = "0.1", default-features = false }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP client/server
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"

# Math and statistics
ndarray = "0.15"
statrs = "0.16"
nalgebra = "0.32"
rust_decimal = "1.33"

# Configuration
config = "0.13"

# Circuit breaker dependencies
dashmap = "5.5"
arc-swap = "1.6"
parking_lot = "0.12"

# Testing
criterion = "0.5"
proptest = "1.4"
mockito = "1.2"
pretty_assertions = "1.4"
