[package]
name = "bot4-main"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework for metrics endpoints
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.13"
dotenv = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Performance
mimalloc = { version = "0.1", optional = true }

[features]
default = []
mimalloc = ["dep:mimalloc"]

[[bin]]
name = "bot4"
path = "src/main.rs"