[package]
name = "layer_enforcement"
version = "0.1.0"
edition = "2021"
authors = ["Bot4 Full Team - DEEP DIVE Implementation"]
description = "Compile-time layer architecture enforcement using phantom types"

[dependencies]
# Procedural macro support
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Compile-time checking
static_assertions = "1.1"

[dev-dependencies]
trybuild = "1.0"

[lib]
name = "layer_enforcement"
path = "src/lib.rs"