[package]
name = "bot4-agent-architect"
version = "1.0.0"
edition = "2021"
authors = ["Bot4 Team"]

[dependencies]
# MCP SDK
rmcp = { version = "0.2", features = ["server", "transport", "docker"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Code analysis
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"

# File system
walkdir = "2.4"
regex = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["server", "transport", "docker"]
server = []
transport = []
docker = []