[package]
name = "bot4-complianceauditor"
version = "1.0.0"
edition = "2021"
authors = ["Bot4 Team"]

[dependencies]
# MCP SDK
rmcp = { version = "0.2", features = ["server", "transport"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Cryptography
ring = "0.17"
ed25519-dalek = "2.1"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Audit logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Compliance standards
iso8601 = "0.6"

# Metrics
prometheus = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
dashmap = "5.5"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "complianceauditor-agent"
path = "src/main.rs"