[package]
name = "bot4-agent-exchangespec"
version = "1.0.0"
edition = "2021"
authors = ["Bot4 Team"]

[dependencies]
# MCP SDK
rmcp = { version = "0.2", features = ["server", "transport", "docker"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP/WebSocket
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
ring = "0.17"

# Rate limiting
governor = "0.6"

# Financial types
rust_decimal = { version = "1.33", features = ["maths"] }
rust_decimal_macros = "1.33"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"
dashmap = "5.5"

[features]
default = ["server", "transport", "docker"]
server = []
transport = []
docker = []