[package]
name = "bot4-agent-infraengineer"
version = "1.0.0"
edition = "2021"
authors = ["Bot4 Team"]

[dependencies]
# MCP SDK
rmcp = { version = "0.2", features = ["server", "transport", "docker"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
yaml-rust = "0.4"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# System monitoring
sysinfo = "0.30"
prometheus = "0.13"
prometheus-parse = "0.2"
procfs = "0.16"
libc = "0.2"

# CPU optimization (no GPU!)
rayon = "1.8"
num_cpus = "1.4"
cpu-time = "1.0"
parking_lot = "0.12"
crossbeam = "0.8"

# Performance profiling
perf-event = "0.4"
criterion = { version = "0.5", optional = true }

# Docker/K8s
bollard = "0.15"
kube = { version = "0.87", features = ["client", "runtime"] }
k8s-openapi = { version = "0.20", features = ["v1_29"] }

# Process management
nix = { version = "0.27", features = ["process", "signal"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
dashmap = "5.5"

[features]
default = ["server", "transport", "docker"]
server = []
transport = []
docker = []
benchmark = ["criterion"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"

[profile.release.build-override]
opt-level = 3

[[bin]]
name = "infraengineer-agent"
path = "src/main.rs"