[package]
name = "bot4-qualitygate"
version = "1.0.0"
edition = "2021"
authors = ["Bot4 Team"]

[dependencies]
# MCP SDK
rmcp = { version = "0.2", features = ["server", "transport"] }

# Async runtime  
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Code analysis
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
cargo_metadata = "0.18"
rustfmt-nightly = "1.6"

# Test coverage - using simpler versions
grcov = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

# File system
walkdir = "2.4"
globset = "0.4"
ignore = "0.4"

# Process execution
which = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
dashmap = "5.5"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"

[[bin]]
name = "qualitygate-agent"
path = "src/main.rs"