[package]
name = "bot4-agent-riskquant"
version = "1.0.0"
edition = "2021"
authors = ["Bot4 Team"]

[dependencies]
# MCP SDK
rmcp = { version = "0.2", features = ["server", "transport", "docker"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Mathematical libraries
ndarray = "0.15"
ndarray-stats = "0.5"
statrs = "0.16"
nalgebra = "0.32"

# Financial calculations
rust_decimal = { version = "1.33", features = ["maths"] }
rust_decimal_macros = "1.33"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["server", "transport", "docker"]
server = []
transport = []
docker = []