[package]
name = "analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Mathematical validation and statistical analysis module"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
log = "0.4"

# Math and statistics
nalgebra = { workspace = true }
statrs = { workspace = true }
ndarray = { workspace = true }

# For testing
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }

[lib]
name = "analysis"
path = "src/lib.rs"