[package]
name = "data_intelligence"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.39", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Data structures
bytes = "1.7"
bytemuck = "1.18"
zerocopy = "0.7"
memmap2 = "0.9"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6.1"

# SIMD and performance
packed_simd = "0.3"
simdeez = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rkyv = { version = "0.7", features = ["validation"] }

# WebSocket and HTTP
tokio-tungstenite = "0.20"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hyper = "0.14"

# Time series
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"

# Natural Language Processing
rust-bert = "0.21"  # For sentiment analysis
tokenizers = "0.13"  # For text tokenization

# Machine Learning
candle-core = "0.3"  # For embeddings
candle-nn = "0.3"
candle-transformers = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "rust_decimal"] }
redis = { version = "0.23", features = ["aio", "tokio-comp"] }

# Compression
lz4 = "1.24"
zstd = "0.13"

# Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Internal crates
infrastructure = { path = "../infrastructure" }
# unified_types is part of risk crate, not separate

[features]
default = ["avx512"]
avx512 = []
avx2 = []
sse4 = []

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"

# Benchmarks can be added later
# [[bench]]
# name = "simd_benchmarks"
# harness = false