[package]
name = "feature_store"
version = "0.1.0"
edition = "2021"

[dependencies]
# Redis for online serving
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager", "cluster-async"] }

# Apache Arrow for zero-copy
arrow = { version = "56.1", features = ["prettyprint", "ipc"] }
arrow-flight = "56.1"
arrow-array = "56.1"
arrow-buffer = "56.1"
arrow-schema = "56.1"
arrow-ipc = "56.1"
parquet = { version = "56.1", features = ["async", "arrow"] }

# TimescaleDB integration
deadpool-postgres = "0.12"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rkyv = { version = "0.7", features = ["validation", "strict"] }

# Math and statistics
ndarray = { version = "0.15", features = ["serde"] }
nalgebra = "0.32"
statrs = "0.16"
rust_decimal = { version = "1.33", features = ["serde", "db-tokio-postgres"] }

# Monitoring and metrics
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Memory management
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "5.5"
arc-swap = "1.6"
lru = "0.12"

# SIMD optimization (removed - requires nightly)
# packed_simd = { version = "0.3", package = "packed_simd_2" }

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# UUID for feature versioning
uuid = { version = "1.6", features = ["v4", "serde"] }

# Random number generation for A/B testing
rand = "0.8"
rand_chacha = "0.3"

# Web framework for metrics endpoint
warp = "0.3"

# Internal dependencies
infrastructure = { path = "../infrastructure" }
types = { path = "../types" }
ml = { path = "../ml" }
data_ingestion = { path = "../data_ingestion" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1