[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Memory management - Day 2 Sprint (Critical)
mimalloc = { workspace = true }
crossbeam = "0.8"
crossbeam-utils = "0.8"  # For CachePadded as recommended by Sophia
thread_local = "1.1"
lazy_static = "1.4"

# Phase 1: Parallelization (Nexus requirement)
rayon = "1.8"
num_cpus = "1.16"
libc = "0.2"  # For CPU affinity on Linux

# Core dependencies
anyhow = { workspace = true }
log = "0.4"

# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

# Loom for concurrency testing
[target.'cfg(loom)'.dependencies]
loom = "0.7"