[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Memory management - Day 2 Sprint (Critical)
mimalloc = { workspace = true }
crossbeam = "0.8"
crossbeam-utils = "0.8"  # For CachePadded as recommended by Sophia
crossbeam-queue = "0.3"
crossbeam-epoch = "0.9"
thread_local = "1.1"
lazy_static = "1.4"

# Task 0.1.1: CPU Feature Detection (Sam + Jordan)
once_cell = "1.19"  # For lazy CPU feature detection

# Phase 1: Parallelization (Nexus requirement)
rayon = "1.8"
num_cpus = "1.16"
libc = "0.2"  # For CPU affinity on Linux

# Core dependencies
anyhow = { workspace = true }
log = "0.4"
rust_decimal = "1.33"
chrono = { workspace = true }

# Phase 3: Stream Processing Dependencies
redis = { version = "0.24", features = ["aio", "tokio-comp", "streams", "connection-manager"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
serde_json = { workspace = true }

# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

# Loom for concurrency testing
[target.'cfg(loom)'.dependencies]
loom = "0.7"