[package]
name = "ml"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
infrastructure = { path = "../infrastructure" }

# Core
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# ML & Math
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.16"
rayon = "1.8"
dashmap = "5.5"
rust_decimal = "1.33"
nalgebra = "0.32"
num-complex = "0.4"
rustfft = "6.1"
ordered-float = "4.1"

# Utilities
crossbeam = "0.8"
tracing = "0.1"
flate2 = "1.0"
sha2 = "0.10"

# Model Registry specific
memmap2 = "0.9"  # Memory-mapped files for zero-copy
rkyv = { version = "0.7", features = ["validation"] }  # Zero-copy deserialization
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
tempfile = "3.8"  # For tests

# Logging
log = "0.4"

# Math functions
libm = "0.2"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"