[package]
name = "order_management"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain_types = { path = "../../domain_types" }
# Core dependencies
infrastructure = { path = "../infrastructure" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Decimal arithmetic for precise financial calculations
rust_decimal = { version = "1.33", features = ["maths"] }
rust_decimal_macros = "1.33"

# Math and optimization
nalgebra = "0.32"

# Async utilities
futures = "0.3"

# Random for testing
rand = "0.8"

# State machine
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
